--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <div class="featured-blocks">
                     <div class="row-fluid">
                     <div class="featured-heading">
-                        <h1>Nunc dig nissi</h1>
+                        <h1>items and product</h1>
                         <h5>Phasellus ultrices nulla quis</h5>
                     </div>
                     </div>
@@ -147,7 +147,7 @@
                                 <div class="span4">
                             <div class="block">
                                 <div class="block-title">
-                                    <h1>مكية للمقاولات</h1>
+                                    <h1>makkia</h1>
                                     <h2>Risus id mediou soim</h2>
                                 </div>
                                 <div class="block-content">
