--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
                     <div class="site-name">
                         <h1>samar ghilan</h1>
-                        <h5>your caption goes here</h5>
+                        <h5>مكية للمقاولات</h5>
                     </div>
 
                     <!-- Site Name ends -->
@@ -118,8 +118,8 @@
                                 <img src="img/banner-image.jpg" alt="">
                                 <div class="carousel-caption">
                                     <i class="fw-icon-desktop"></i>
-                                  <h2>Corem ipsum</h2>
-                                  <h1>sit amet vivamus</h1>
+                                  <h2>blok</h2>
+                                  <h1>interlock</h1>
                                   <a href="#myModal" role="button" class="btn" data-toggle="modal"> more info</a>
                                 </div>
                             </div>
